# cetbuildtools

./: CMakeLists.txt  CMakePresets.json  README
Modules/: BuildDictionary.cmake  CetCMakeConfig.cmake  CetCMakeEnv.cmake  CetTest.cmake  CheckClassVersion.cmake  EnsureOutOfSourceBuild.cmake  FindUpsBoost.cmake  FindUpsPackage.cmake  InstallWP.cmake  SetCompilerFlags.cmake
config/: cetbuildtools-quiet-warnings.cmake
templates/: product-config.cmake.in.template
ups/: cetbuildtools.table  product-config.cmake.in  product_deps  setup_for_development
